--- a/Jane.Todo.Api/Jane.Todo.Api.csproj
+++ b/Jane.Todo.Api/Jane.Todo.Api.csproj
@@ -9,5 +9,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jane.Todo.Dto\Jane.Todo.Dto.csproj" />
+    <ProjectReference Include="..\Jane.Todo.Shared\Jane.Todo.Shared.csproj" />
+  </ItemGroup>
+
 
 </Project>
