--- a/Jane.Todo.Web/Jane.Todo.Web.csproj
+++ b/Jane.Todo.Web/Jane.Todo.Web.csproj
@@ -1,22 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazored.LocalStorage" Version="2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Jane.Todo.Dto\Jane.Todo.Dto.csproj" />
-    <ProjectReference Include="..\Jane.Todo.Shared\Jane.Todo.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Components\ViewModels\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
