--- a/Jane.Tests.Infrastructure/Jane.Tests.Infrastructure.csproj
+++ b/Jane.Tests.Infrastructure/Jane.Tests.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
   <ItemGroup>
