--- a/Jane.API.Tests/Jane.API.Tests.csproj
+++ b/Jane.API.Tests/Jane.API.Tests.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="ReportPortal.Client" Version="3.0.3" />
+    <PackageReference Include="ReportPortal.NLog" Version="2.0.0" />
     <PackageReference Include="ReportPortal.NUnit" Version="4.0.0" />
     <PackageReference Include="ReportPortal.Shared" Version="3.0.2" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
